fixed date range so can copy inline when on desktop and made date range block level elements on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,11 @@ header {
    margin: 40px auto;
 }
 
-#daterange {
+.daterange {
     display: flex;
     display: row;
     align-items: baseline;
+    margin-bottom: 35px;
 }
 
 .injectiontitle {
@@ -104,10 +105,6 @@ header {
 
 .todaysetting {
     margin-bottom: 35px;
-}
-
-#BeginningDate {
-    margin-bottom: 25px;
 }
 
 .indicator {
@@ -160,6 +157,11 @@ header {
     color: #949494;
 }
 
+.breakdateMOBILE {
+    display: none;
+}
+
+
 @media only screen and (max-width: 600px) {
 
     header {
@@ -182,12 +184,29 @@ header {
         margin: 40px auto;
      }
 
-     #daterange {
+    .indicator {
+        margin: 0px 0px;
+    }
+
+    .daterange {
+        flex-direction: column;
+    }
+
+    .breakdateMOBILE {
         display: block;
     }
 
-    .indicator {
-        margin: 0px 0px;
+    span {
+        display: block;
+    }
+
+    #BeginningDate {
+        margin-bottom: 25px;
+    }
+
+    .date {
+        margin-bottom: 0px;
+        line-height: 15px;
     }
 
 }
